--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body, html {
 ul{
     padding: 0px;  
     margin: 0px;
+    width: 90px;
     list-style: none;
     color: ivory;
     background-color:#081419;
@@ -59,16 +60,17 @@ ul li a .icon {
 }
 
 ul li a .icon{
-    width: 120%;
+    width: 50%;
     height: 100%;
     margin-top: 10px;
+    margin-left: 20px;
     line-height: 40px;
     font-size: 20px;
     color: rgb(204, 198, 198);
 }
 .name{
     color:rgb(228, 222, 222);
-   
+    margin-left: 10px;
 }
 
 .caixa{
@@ -110,6 +112,7 @@ ul li a .icon{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    background-color: #081419;
 }
 
 .main-top {
@@ -131,7 +134,7 @@ ul li a .icon{
 .Tres {
   
     background-color: #081419;
-    height: 30%;
+    height: 10%;
 
 }
 
@@ -150,7 +153,7 @@ ul li a .icon{
   
     width: 955px;
     height: 189px;
-    background-color: rgb(0, 0, 0);
+    background-color: #081419;
     margin-top: 7px;
     margin-left: 15px;
     border-radius: 10px;
@@ -164,7 +167,7 @@ ul li a .icon{
         height: 60px;
     }
 
-    .reproduccion-a {background-color: #0D1D24;}
+    .reproduccion-a {background-color: #0D1D24;margin-top: -10px;}
     .reproduccion-b{background-color: #11262f;}
     .reproduccion-c{background-color: #0D1D24;}
     .reproduccion-d{background-color: #11262f;}
@@ -176,8 +179,9 @@ ul li a .icon{
 }
 .rojo {
     background-color: red;
-    width:800px;
+    width:700px;
     margin-left: 100px;
+    margin-top: -42px;
 }
 .azul{
     background-color: blue;
@@ -194,8 +198,42 @@ ul li a .icon{
     width:900px;
     margin-left: 30px;
 }
+.menu-play {
+    background-color: rgb(0, 255, 55);
+    width:80px;
+    margin-left: 30px;
+    margin-top: 100;
+}
+.agregar-escena {
+    width: 30px;
+    margin-left: 90px;
+}
 
+.microfono{
+    width: 25px;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+.sonido {
+    width: 15px;
+    margin-left: 70px;
+    margin-top: -20px;  
+}
+.ojo {
+    width: 15px;
+    margin-left: 70px;
+    margin-top: 10px;
+}
 
+.menu-play{
+    background-color: antiquewhite;
+    width: 100px;
+    margin-top: -100px;
+}
 
-
+.circulo-a{
+    background-color: rgb(230, 130, 0);
+    width: 10px;
+    margin-top: 10px;  
+}
 
