--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ ul{
     width: 90px;
     list-style: none;
     color: ivory;
-    background-color:#081419;
+    background-color:#050e13;
 }
 
 ul li{
@@ -73,23 +73,36 @@ ul li a .icon{
     margin-left: 10px;
 }
 
-.caixa{
+.caixa-a, .caixa-b, .caixa-c, .caixa-d, .caixa-e, .caixa-f, .caixa-g{
 
-    background-color:rgba(170, 165, 164, 0.678);
     width: 215px;
     left: 68px;
     top: 55px;
     height: 103px;
-    border-width: medium;
+    border-width: 1px;
     border-style: solid;
     border-color: rgba(255, 255, 255, 0.678);
+  
          
 }
+.caixa-a {background-image: url(fotos/escenaa.jpg);}
+.caixa-b {background-image: url(fotos/escenab.jpg);}
+.caixa-c{background-image: url(fotos/escenac.jpg);}
+.caixa-d{background-image: url(fotos/escenad.jpg);}
+.caixa-e{background-image: url(fotos/escenae.jpg);}
+.caixa-f{background-image: url(fotos/escenaf.jpg);}
+.caixa-g{background-image: url(fotos/escenag.jpg);}
+
+
+
 .escena-trans-efecto{
     background-color: white;
     width: 50px;
     height: 50px;
     margin: -30px auto;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(0, 139, 253, 0.678);
 }
 
 .item-escena{
@@ -112,11 +125,11 @@ ul li a .icon{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: #081419;
+    background-color: #050e13;
 }
 
 .main-top {
-    background-color: #081419;
+    background-color: #050e13;
     height: 70%;
     display: flex;
     flex-direction: column;
@@ -126,9 +139,9 @@ ul li a .icon{
 
 .foto {
 
-    background-color: rgb(170, 165, 164);
-    width:550px;
-    height: 300px;
+    background-image: url(fotos/escenamedio.jpg);
+    width:890px;
+    height:500px;
 
 }
 .Tres {
@@ -236,4 +249,5 @@ ul li a .icon{
     width: 10px;
     margin-top: 10px;  
 }
+
 
