--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ ul li a .icon{
   
          
 }
-.caixa-a {background-image: url(fotos/escenaa.jpg);}
-.caixa-b {background-image: url(fotos/escenab.jpg);}
+.caixa-a{background-image: url(fotos/escenaa.jpg);}
+.caixa-b{background-image: url(fotos/escenab.jpg);}
 .caixa-c{background-image: url(fotos/escenac.jpg);}
 .caixa-d{background-image: url(fotos/escenad.jpg);}
 .caixa-e{background-image: url(fotos/escenae.jpg);}
@@ -197,6 +197,7 @@ ul li a .icon{
     height: 72px;
     display: flex;
     align-items: center;
+    padding-right: 20px;
 }
 
 .reproduccion-a{background-color: #0D1D24;}
@@ -211,22 +212,22 @@ ul li a .icon{
 }
 .rojo {
     background-color: #df184d;
-    width:700px;
+    width: 70%;
     margin-left: 100px;
 }
 .azul{
     background-color: #1482ff;
-    width:600px;
+    width: 70%;
     margin-left: 170px;
 }
 .verde{
     background-color: #48c295;
-    width:300px;
+    width: 35%;
     margin-left: 400px;
 }
 .naranja{
     background-color: #e14848;
-    width:900px;
+    width:72%;
     margin-left: 30px;
 }
 .menu-play {
@@ -249,11 +250,40 @@ ul li a .icon{
     font-size: 48px;
 }
 
+.timeline-icons {
+    width: 120px;
+    min-width: 120px;
+    height: 100%;
+    border-right: 1px solid #00000089;
+    display: flex;
+    align-items: center;
+    padding-left: 17px;
+    font-size: 40px;
+    color: #dddddd;
+}
+
 .microfono{
-    width: 25px;
+    width: 30px;
     margin-left: 30px;
     margin-top: 30px;
 }
+.circulo-color {
+    width: 24px;
+    height: 24px;
+    background-color: #df184d;
+    border-radius: 50%;
+    margin-top: 18px;
+    margin-left: -2px;
+}
+
+.circulo-icon {
+    width: 50px;
+    height: 50px;
+    background-color: #c0c0c034;
+    border-radius: 50%;
+
+}
+
 .sonido {
     width: 15px;
     margin-left: 70px;
