--- a/style.css
+++ b/style.css
@@ -342,6 +342,70 @@ border-radius: 6px;
 .ocultar {
     display: none;
 }
+.contenedor-opciones{
+    overflow-y: scroll;
+    height: 100%;
+}
+
+.input{
+    width: 200px;
+    height: 35px;
+    background-color: seagreen;
+}
+.colores {
+    width: 300px;
+    height: 35px;
+    background-color:rgb(139, 46, 89);
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+
+}
+
+.negro, .blanco, .azul-claro, .verde-claro, .amarillo, .anaranjado, .morado{
+    width:20px;
+    height: 20px;
+    border-radius: 100%;
+  
+
+}
+
+.negro{background-color: black;}
+.blanco{background-color: white;}
+.azul-claro{background-color: rgb(12, 128, 236);}
+.verde-claro{background-color: rgb(69, 248, 45);}
+.amarillo{background-color: yellow;}
+.anaranjado{background-color: orangered;}
+.morado{background-color: rgb(152, 13, 156);}
+
+
+.con-borda {
+    border: 4px solid #999;
+    width: 24px;
+    height: 24px;
+}
+.texto-mis-fondos{
+    width: 150px;
+    height: 30px;
+    background-color: rgb(228, 222, 222);
+}
+.fotos-fondo{
+    width: 345px;
+    height: 200px;
+    background-color: rgb(146, 0, 0);
+}
+.fotos-libreria{
+    width: 345px;
+    height: 400px;
+    background-color: rgb(0, 146, 139);
+
+}
+
+
+
+
+
 
   @font-face {
     font-family: 'Roboto';
