--- a/style.css
+++ b/style.css
@@ -343,24 +343,33 @@ border-radius: 6px;
     display: none;
 }
 .contenedor-opciones{
-    overflow-y: scroll;
+    
     height: 100%;
 }
 
 .input{
-    width: 200px;
+    width: 300px;
     height: 35px;
-    background-color: seagreen;
+    background-color: #11262f;
+    border-radius: 10px;
+    display: inline-flex;
+    align-items: center;
+    
+}
+.Fields {
+    width:200px;
+	background-color: #11262f;
+    font-size: 13px;
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
+    
 }
 .colores {
     width: 300px;
     height: 35px;
-    background-color:rgb(139, 46, 89);
     display: inline-flex;
     justify-content: space-evenly;
     align-items: center;
-    
-
 }
 
 .negro, .blanco, .azul-claro, .verde-claro, .amarillo, .anaranjado, .morado{
@@ -385,22 +394,47 @@ border-radius: 6px;
     width: 24px;
     height: 24px;
 }
+
+.contenedor-fotos{
+    overflow-y: scroll;
+  
+    padding-top: 10px;
+    margin-top: 20px;
+    max-height: calc(100% - 70px);
+}
 .texto-mis-fondos{
     width: 150px;
     height: 30px;
-    background-color: rgb(228, 222, 222);
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 100px;
+    font-size: 18px;
+    color: white;
 }
-.fotos-fondo{
-    width: 345px;
-    height: 200px;
-    background-color: rgb(146, 0, 0);
+
+
+.img{
+    width: 160px;
+    height: 85px;
+    margin-top: 10px;
+    margin-left: 7px;
+ 
 }
-.fotos-libreria{
-    width: 345px;
-    height: 400px;
-    background-color: rgb(0, 146, 139);
+ .fa-angle-down{
+     font-size: 30px;
+ }
+ .anadir-fondo {
+    height: 100px;
+    color: #dddddd;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 18px;
+    margin-left: 160px;
+    margin-top: -70px;
 
 }
+
 
 
 
