--- a/style.css
+++ b/style.css
@@ -442,23 +442,21 @@ border-radius: 6px;
     text-align: center;
 }
 .anadir-objetos{
+   
     height: 100px;
     color: #dddddd;
     text-align: center;
     font-family: Roboto;
     font-size: 16px;
-    margin-left: 50px;
-    margin-top: -65px;
-
-
+    margin-left: 100px;
+    margin-top: -50px;
 }
 
 .figuras {
-    width: 56px;
-    height: 70px;
+    height: 50px;
     margin-top: 20px;
-    margin-left: 20px;
-    object-fit: cover;
+    margin-left: 30px;
+    object-fit: cover;;
 }
 .mis-audios{
     margin-top: 30px;
