--- a/estiloaudio.css
+++ b/estiloaudio.css
@@ -62,6 +62,7 @@ body, html {
     margin-top: 20px;
     margin-left: 70px;
     border-radius: 20px;
+    position: relative;
 
  
  
@@ -72,7 +73,12 @@ body, html {
 
 .fondo-musical-uno i, .fondo-musical-dos i
 { 
-    font-size: 25px;
+    font-size: 30px;
+    position: absolute;
+    margin-top: 30px;
+    margin-left: 20px;
+    color: #888888;;
+
 } 
 ul {
     list-style: none;
@@ -86,6 +92,37 @@ li{
     display: inline-block;
     width: 100px;
 }
+
+.fondos-musicales{
+ 
+    overflow-y: scroll;
+    max-height: calc(100% - 105px);
+}
+/* Scrollbar styles */
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    margin-right: 20px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+    background: transparent; 
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+    background: #899397; 
+    border-radius: 6px;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+    background: #a6b1b6; 
+    border-radius: 6px;
+    }
+
 .boton-nuevo {
     background-color: #5bc6f8;
     width: 150px;
@@ -93,6 +130,31 @@ li{
     border-radius: 20px;
     margin-left: 620px;
 }
-.fa-trash {
-    font-size: 20px;
+
+.textos-musicales {
+    position: absolute;
+    padding-top: 15px;
+    padding-left: 70px;
 }
+
+.numeros {
+    position: absolute;
+    top: 50px;
+    left: 70px;
+}
+.numeros-izquierda {
+    position: absolute;
+    top: 50px;
+    left: 600px;
+}
+
+.rangeJs {
+
+    display: inline-block;
+    height: 10px;
+    width: 450px;
+    position: absolute;
+    top: 53px;
+    left: 130px;
+}
+
